<resources>
  <string name="app_name">Baker</string>
  <string name="recipe_list_header">Recipes</string>
  recipe_list_header
  <string name="menu_refresh">Refresh</string>
  <string name="menu_debug_data">Randomize</string>

  <string name="recipe_servings_header">Servings: %1$d</string>

  <!-- we need to leave out space, because there are cases like
   1 cup
   then there are cases like
   200g
  -->
  <string name="ingredient_template">%1$s %2$s</string>

  <string name="measure_text_unknown">%1$s %2$s</string>
  <string name="measure_text_gram">%1$sg</string>
  <string name="measure_text_ounce">%1$soz</string>
  <string name="measure_text_unit">%1$s</string>
  <string name="measure_text_cup">%1$s cup</string>
  <string name="measure_text_teaspoon">%1$s teaspoon</string>
  <string name="measure_text_tablespoon">%1$s tablespoon</string>

  <string name="step_detail_title_template">Step %1$s</string>

  <string name="next_step_text">Next Step</string>

  <string name="ingredients_header">Ingredients</string>
  <string name="steps_header">Steps</string>

  <string name="save_to_widget_text">To Widget</string>
  <string name="menu_save_to_widget">Save Ingredients To Widget</string>

  <string name="widget_ingredient_header_template">Ingredients for %1$s</string>

  <string name="save_to_widget_notification">Saved Recipe List to Widget</string>

  <string name="bullet">・</string>

  <string name="cannot_load_recipe_error">Unable to load this recipe.</string>
  <string name="cannot_load_step_error">Unable to load this step.</string>

  <string name="network_error_message">A network error has occurred. Please try again later.</string>

  <string name="step_thumbnail">Step Thumbnail</string>

  <string name="no_ingredients_set">No Ingredients Set. Click to find a Recipe!</string>


  <string name="recipe_image_content_description">Recipe Image</string>
  <string name="button_placeholder_content_description">placeholder</string>
</resources>
