<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_half_size">

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding"
        android:text="@string/network_error_message"
        android:textSize="@dimen/error_text_size"
        android:textColor="#f00"
        android:background="@color/white_accent_background"
        android:visibility="gone"
        android:elevation="3dp"/>


    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/ingredients_header"
        android:textSize="@dimen/header_size"
        android:textColor="@color/colorAccent"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/rv_ingredients"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:scrollbars="none"
          android:padding="2dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/steps_header"
        android:textSize="@dimen/header_size"
        android:textColor="@color/colorAccent"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:padding="2dp"/>


  </LinearLayout>

</ScrollView>