<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/margin_half_size"
      >

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_accent_background"
        android:elevation="3dp"
        android:padding="@dimen/standard_padding"
        android:text="@string/network_error_message"
        android:textColor="#f00"
        android:textSize="@dimen/error_text_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/ingredients_header"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredients"/>

    <TextView
        android:id="@+id/tv_steps"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/steps_header"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/header_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_ingredients"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="2dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_steps"/>

    <Button
        android:id="@+id/b_to_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:paddingEnd="@dimen/standard_padding"
        android:paddingStart="@dimen/standard_padding"
        android:text="@string/save_to_widget_text"
        android:textColor="@color/button_text"
        app:layout_constraintBottom_toTopOf="@+id/rv_ingredients"
        app:layout_constraintStart_toEndOf="@+id/tv_ingredients"
        app:layout_constraintTop_toTopOf="@+id/tv_ingredients"/>


  </android.support.constraint.ConstraintLayout>

</ScrollView>